--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="css/styles.css"/>
     <script src = "web/lib.js"></script>
     <script src = "main.js"></script>
 <head>
